--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Memory_Jogger</string>
+    <string name="start">Start</string>
+    <string name="_0">0</string>
+    <string name="score">Score:</string>
 </resources>
