--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,16 @@
     <string name="hard">hard</string>
     <string name="player">player</string>
     <string name="back">back</string>
+    <string name="title_activity_set_high_score">setHighScoreActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="your_score">YOUR SCORE</string>
+    <string name="your_name">your name</string>
+    <string name="submit">submit</string>
 </resources>
