--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="your_name">your name</string>
     <string name="submit">submit</string>
     <string name="play_again">play again</string>
+    <string name="reset_scores">RESET SCORES</string>
 </resources>
